--- a/citations.bib
+++ b/citations.bib
@@ -60,3 +60,10 @@
   year={2009},
   publisher={Springer}
 }
+@book{bishop2006pattern,
+  title={Pattern recognition and machine learning},
+  author={Bishop, Christopher M and others},
+  volume={1},
+  year={2006},
+  publisher={springer New York}
+}
