Add naive bayes citation

--- a/citations.bib
+++ b/citations.bib
@@ -67,3 +67,15 @@
   year={2006},
   publisher={springer New York}
 }
+@online{naivebayes,
+    title={Probability models: examples and pictures},
+    url = {http://sysmagazine.com/posts/177889/},
+    year = 2014,
+    note = {Accessed: 2014-09-23},
+}
+@online{bcjordan,
+  url = {https://github.com/bcjordan/Reddit-Machine-Learning},
+  year = 2014,
+  title = {Reddit Machine Learning},
+  note = {Accessed: 2014-09-23}
+}
