Remove trailing comma

--- a/report.tex
+++ b/report.tex
@@ -104,7 +104,7 @@ The other option is to use k different 1-vs-all binary classifiers. However, thi
 \begin{figure}
     \centering  
     \includegraphics[width=0.5\textwidth]{./sysmag_bayes.png}
-    \caption{Graphical representation of dependance in the Naive Bayes model. $C$ is the class and $a_i$ are the features. Readers should note that $C$ is dependent of the features but there is no dependence between features. }
+    \caption{Graphical representation of dependance in the Naive Bayes model. $C$ is the class and $a_i$ are the features. Readers should note that $C$ is dependent of the features but there is no dependence between features.\cite{naivebayes }
     \label{bayesnet}
 \end{figure}
 
