--- a/citations.bib
+++ b/citations.bib
@@ -71,7 +71,7 @@
     title={Probability models: examples and pictures},
     url = {http://sysmagazine.com/posts/177889/},
     year = 2014,
-    note = {Accessed: 2014-09-23},
+    note = {Accessed: 2014-09-23}
 }
 @online{bcjordan,
   url = {https://github.com/bcjordan/Reddit-Machine-Learning},
